2007-01-11  Albert Astals Cid <aacid@kde.org>

	* goo/gmem.c: Merge change from xpdf-3.01pl2

2007-01-11  Albert Astals Cid <aacid@kde.org>

	* poppler/Catalog.h:
	* poppler/Catalog.cc: Limit max depth of recursive calls on
	readPageTree to fix MOAB-06-01-2007

2007-01-04  Albert Astals Cid <aacid@kde.org>

	* qt/poppler-page-transition.cc: Fix memory leak. Patch by
	Tobias Koenig <tokoe@kde.org>

2006-12-28  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-embeddedfile.cc:
	* qt4/src/poppler-document.cc:
	* qt/poppler-document.cc: Fix memory leaks.

2006-12-27  Albert Astals Cid <aacid@kde.org>

	* poppler/Catalog.h:
	* qt4/src/poppler-qt4.h: Remove , after last value of enum. Thanks to
	André Wöbbeking

2006-12-23  Albert Astals Cid <aacid@kde.org>

	* qt/poppler-page.cc: Fix memory leak in Page::textList. Patch by
	Jerry Epplin <jepplin@globalvelocity.com>

	* poppler/Page.cc: Fix memory leak when reading a wrong color map in a
	thumbnail. Patch by Scott Turner <scotty1024@mac.com>

2006-12-19  Albert Astals Cid <aacid@kde.org>

	* poppler/SplashOutputDev.cc: Fix gray calculation. Patch by Scott
	Turner <scotty1024@mac.com>

2006-11-23  Albert Astals Cid <aacid@kde.org>

	* m4/libjpeg.m4: Make JPEG library header search work under MSYS.
	Patch by Alexis	Wilke

2006-11-19  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-link.cc:
	* qt4/src/poppler-page.cc:
	* qt4/src/poppler-qt4.h:
	* qt4/src/poppler-textbox.cc: Fix memory leaks
	* splash/Splash.cc: Initialize the values of nClipRes

2006-11-11  Albert Astals Cid <aacid@kde.org>

	* poppler/PSOutputDev.cc: Fix typo when outputing PS scale

2006-10-18  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-document.cc:
	* qt4/src/poppler-private.h: Do not crash when opening a encrypted
	document. Do not crash when unlocking a locked document. 

2006-10-12  Albert Astals Cid <aacid@kde.org>

	* splash/Splash.cc:
	* splash/SplashErrorCodes.h: Do not crash on documents that report a